# rag-cli

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/rag_cli/: __init__.py  cli.py  core.py
tests/: test_core.py
