[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-cli"
version = "0.1.0"
description = "CLI for the full RAG lifecycle: ingest, query, evaluation, and gap analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/rag-cli"
Issues = "https://github.com/erron-ai/rag-cli/issues"

[project.scripts]
rag-cli = "rag_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
